# AGI_Agent_Asterisk

./: .env  .gitignore  .replit  Emotion_Analysis.py  README.md  Upstage__API_Key_DP_API__250328_185558_analyzed.json  api_1.py  api_10_flask.py  api_key_kmg.txt  app.py  batch_parse.py  dream_ex01_analyzed.json  dream_symbol_analysis.py  dreams_with_emotions.json  dreamscraper.py  embed_to_qdrant.py  emotion_analysis.py  emotion_anlaysis.py  flask_backend.py  index.html  jsontotxt.py  main.py  ocr.py  package-lock.json  package.json  pyproject.toml  rag_pipe.py  reddit_dreams.json  replix.nix  requirements-parsing.txt  requirements.txt  script.js  test_emotion_agent.py  tovector.py  upstage_document_parsing.py  upstage_llm.py  upstage_llm_2.py
agent/: emotion_agent.py
agent_emotion/: __init__.py  emotion_agent.py  llm_utils.py
agent_symbol/: dream_symbols.json  symbol_agent.py
api_application/: embed_to_qdrant.py  ocr.py  rag_pipe.py  upstage_llm.py
attached_assets/: Pasted-const-API-BASE-URL-https-agi-agent-asterisk-render-onrender-com-export-const-authService--1743686523750.txt  Pasted-from-flask-import-Flask-json-jsonify-request-from-flask-cors-import-CORS-import-uuid-from-date-1743682786507.txt  Pasted-from-flask-import-Flask-json-jsonify-request-from-flask-cors-import-CORS-import-uuid-from-date-1743688601850.txt
dream_symbol/: dream_symbol_analysis.py
emotionstateagent/: dreams_with_emotions.json  main.py  process_dreams.py  requirements.txt  run_agent_test.py  test_emotion_agent.py  visualize_emotions.py  visualize_test.py
instance/: dreams.db
(+23 files in other folders)
